[package]
name = "lock_order"
license = "MIT"
version = "0.1.0"
authors = ["Alaric <alaric+cratesio@doublethink.co.uk>"]
edition = "2018"
description = "Utility macro for helping produce a deterministic lock ordering to prevent deadlocks"
repository = "https://github.com/alaric/lock_order"
keywords = ["locking", "ordering", "deterministic-locking"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]

